# mythic

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT_ROADMAP.md  README.md  TODO.md  install.sh
.github/workflows/: bench.yml  ci.yml  release.yml
action/: action.yml  example-workflow.yml
crates/mythic-assets/: Cargo.toml  README.md
crates/mythic-assets/src/: images.rs  lib.rs  sass.rs  scripts.rs  styles.rs
crates/mythic-cli/: Cargo.toml  README.md
crates/mythic-cli/src/: main.rs
crates/mythic-cli/starters/blank/: mythic.toml
crates/mythic-cli/starters/blank/content/: index.md
crates/mythic-cli/starters/blog/content/posts/: first-post.md  second-post.md
crates/mythic-cli/starters/blog/shortcodes/: youtube.html
crates/mythic-cli/starters/blog/templates/: home.html
crates/mythic-cli/starters/docs/content/guide/: quickstart.md
crates/mythic-cli/starters/portfolio/: mythic.toml
crates/mythic-cli/tests/: cli_integration.rs
crates/mythic-core/: Cargo.toml  README.md
crates/mythic-core/benches/: build_bench.rs
crates/mythic-core/src/: a11y.rs  bench_utils.rs  build.rs  cache.rs  cascade.rs  check.rs  computed.rs  config.rs  content.rs  data.rs  diff.rs  feed.rs  i18n.rs  lib.rs  lint.rs  output_format.rs  page.rs  pagination.rs  plugin.rs  redirects.rs  related.rs  remote.rs  rhai_plugin.rs  schema.rs  search.rs  sitemap.rs  summary.rs  taxonomy.rs
crates/mythic-core/src/migrate/: convert.rs  eleventy.rs  hugo.rs  hugo_theme.rs  jekyll.rs  mod.rs
crates/mythic-markdown/: Cargo.toml  README.md
crates/mythic-markdown/src/: frontmatter.rs  highlight.rs  hooks.rs  lib.rs  math.rs  render.rs  shortcodes.rs  toc.rs
crates/mythic-server/: Cargo.toml  README.md
crates/mythic-server/src/: lib.rs  server.rs  watcher.rs
crates/mythic-template/: Cargo.toml  README.md
crates/mythic-template/src/: lib.rs
docs/: mythic.toml
docs/content/: index.md
docs/content/configuration/: reference.md
docs/content/content/: data-files.md  frontmatter.md  markdown.md  shortcodes.md
docs/content/deployment/: ci-cd.md  github-pages.md  other.md
docs/content/features/: accessibility.md  assets.md  i18n.md  linting.md  plugins.md  search.md  seo.md  taxonomies.md
docs/content/getting-started/: installation.md  project-structure.md  quickstart.md
docs/content/migration/: eleventy.md  hugo.md  jekyll.md
docs/content/templates/: context.md  handlebars.md  tera.md
docs/templates/: default.html
fixtures/basic-site/: mythic.toml
fixtures/basic-site/content/: hello.md
fixtures/basic-site/templates/: default.html
scripts/: benchmark-comparison.sh
starters/blog/: mythic.toml
starters/blog/content/: index.md
starters/blog/shortcodes/: callout.html  details.html  figure.html  github.html
starters/blog/templates/: default.html
starters/docs/: mythic.toml
starters/docs/content/: index.md
starters/docs/content/guide/: installation.md
starters/docs/templates/: default.html  docs.html
starters/minimal/: mythic.toml
starters/minimal/content/: about.md  index.md
starters/minimal/templates/: default.html
starters/portfolio/templates/: portfolio.html
