[workspace]
resolver = "2"
members = [
    "crates/mythic-core",
    "crates/mythic-markdown",
    "crates/mythic-template",
    "crates/mythic-assets",
    "crates/mythic-server",
    "crates/mythic-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
