[workspace]
resolver = "2"
members = [
    "crates/mythic-core",
    "crates/mythic-markdown",
    "crates/mythic-template",
    "crates/mythic-assets",
    "crates/mythic-server",
    "crates/mythic-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Josh Burgess"]
description = "A fast, batteries-included static site generator"
repository = "https://github.com/joshburgess/mythic"
homepage = "https://github.com/joshburgess/mythic"
keywords = ["static-site-generator", "ssg", "blog", "website", "markdown"]
categories = ["command-line-utilities", "web-programming"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
chrono = "0.4"
tera = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
