[package]
name = "mythic-assets"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
mythic-core = { path = "../mythic-core" }
image = "0.25"
rayon = "1"
walkdir = "2"
grass = "0.13"

[dev-dependencies]
tempfile = "3"
