[package]
name = "mythic-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
mythic-core = { path = "../mythic-core" }
image = "0.25"
rayon = "1"
walkdir = "2"
grass = "0.13"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
