[package]
name = "mythic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "mythic"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
mythic-core = { path = "../mythic-core" }
mythic-markdown = { path = "../mythic-markdown" }
mythic-template = { path = "../mythic-template" }
mythic-assets = { path = "../mythic-assets" }
mythic-server = { path = "../mythic-server" }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
serde_json.workspace = true
toml.workspace = true
owo-colors = "4"
chrono = "0.4"
include_dir = "0.7"
clap_complete = "4"

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
