[package]
name = "mythic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the Mythic static site generator"
repository.workspace = true

[[bin]]
name = "mythic"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
mythic-core = { path = "../mythic-core", version = "0.3.4" }
mythic-markdown = { path = "../mythic-markdown", version = "0.3.4" }
mythic-template = { path = "../mythic-template", version = "0.3.4" }
mythic-assets = { path = "../mythic-assets", version = "0.3.4" }
mythic-server = { path = "../mythic-server", version = "0.3.4" }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
serde_json.workspace = true
toml.workspace = true
owo-colors = "4"
chrono = "0.4"
include_dir = "0.7"
clap_complete = "4"

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
