[package]
name = "mythic-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
walkdir = "2"
rayon = "1"
rhai = { version = "1", features = ["sync"] }
ahash = "0.8"
lasso = { version = "0.7", features = ["multi-threaded"] }
compact_str = { version = "0.8", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "build_bench"
harness = false
