[package]
name = "mythic-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
walkdir = "2"
rayon = "1"
rhai = { version = "1", features = ["sync"] }
ahash = "0.8"
sha2 = "0.10"
lasso = { version = "0.7", features = ["multi-threaded"] }
compact_str = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "build_bench"
harness = false
