[package]
name = "mythic-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
pulldown-cmark = { version = "0.12", features = ["html"] }
mythic-core = { path = "../mythic-core" }
rayon = "1"
syntect = "5"
tera.workspace = true

[dev-dependencies]
tempfile = "3"
