[package]
name = "mythic-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Markdown rendering, frontmatter parsing, syntax highlighting, and shortcodes for the Mythic static site generator"
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
pulldown-cmark = { version = "0.12", features = ["html"] }
mythic-core = { path = "../mythic-core", version = "0.1.1" }
rayon = "1"
syntect = "5"
tera = "1"

[dev-dependencies]
tempfile = "3"
