[package]
name = "mythic-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
mythic-core = { path = "../mythic-core" }
notify = "7"
notify-debouncer-mini = "0.5"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
