[package]
name = "mythic-template"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
handlebars = "6"
minijinja = { version = "2", features = ["json"] }
walkdir = "2"
pulldown-cmark = { version = "0.12", features = ["html"] }
mythic-core = { path = "../mythic-core" }

[dev-dependencies]
tempfile = "3"
