[package]
name = "mythic-template"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-engine template system (Tera + Handlebars) for the Mythic static site generator"
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tera = "1"
handlebars = "6"
walkdir = "2"
pulldown-cmark = { version = "0.12", features = ["html"] }
mythic-core = { path = "../mythic-core", version = "0.2.2" }

[dev-dependencies]
tempfile = "3"
