[package]
name = "mythic-template"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-engine template system (Tera + Handlebars + MiniJinja) for the Mythic static site generator"
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tera = "1"
handlebars = "6"
minijinja = { version = "2", features = ["json"] }
walkdir = "2"
pulldown-cmark = { version = "0.12", features = ["html"] }
chrono = "0.4"
mythic-core = { path = "../mythic-core", version = "0.3.3" }

[dev-dependencies]
tempfile = "3"
